--- a/aboutus.html
+++ b/aboutus.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link href="https://fonts.googleapis.com/css?family=Cuprum|EB+Garamond|Euphoria+Script|Nunito" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="logotemp.jpg" />
+    <link rel="shortcut icon" type="image/x-icon" href="ewlogo.jpg" />
 </head>
 
 <style>
@@ -63,18 +63,19 @@ function w3_close() {
   </a>
 </div>
 
-<div zclass="w3-main" id="main">
+<div class="w3-main" id="main">
 
-<div class="w3-black">
-  <button class="w3-button w3-black w3-xlarge" onclick="w3_open()">&#9776;</button>
-  <div class="w3-container">
-    <center><c>Work Escape</center></c>
+  <div class="w3-black">
+    <button class="w3-button w3-black w3-xlarge" onclick="w3_open()">&#9776;</button>
+    <div class="w3-container">
+      <center><a href="https://ewtechinc.github.io/workescape/home.html"><img src="ewlogo.jpg" alt="ewlogo" width="100" height="100" border="0"></a><c>Work Escape</center></c>
+    </div>
   </div>
-</div>
 
 <div class="w3-container">
 <b>About Us</b>
-<p>Hi there! Welcome to our page! We (Ashley Hau, Cathy Kim, and Ashley Kang) are the founders of Equality Wins Tech Inc. (EWtech Inc.)
+<p>Hi there!</p>
+<p>Welcome to our page! We (Ashley Hau, Cathy Kim, and Ashley Kang) are the founders of Equality Wins Tech Inc. (EWtech Inc.)
     and the creators of Work Escape (WE). Our company, EWtech Inc., is founded on the basis of gender equality — we believe everyone in the workforce should be treated equally regardless of his or her gender. </p>
     <p>We are a part of Girls Who Code 2017, a summer immersion program for high school girls aiming to increase the number of women in computer science
         by teaching girls how to program and code. </p>
