--- a/contactus.html
+++ b/contactus.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Cuprum|EB+Garamond|Euphoria+Script|Nunito" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="logotemp.jpg" />
+    <link rel="shortcut icon" type="image/x-icon" href="ewlogo.jpg" />
 </head>
 
 <style>
@@ -65,14 +70,14 @@ function w3_close() {
   </a>
 </div>
 
-<div zclass="w3-main" id="main">
+<div class="w3-main" id="main">
 
-<div class="w3-black">
-  <button class="w3-button w3-black w3-xlarge" onclick="w3_open()">&#9776;</button>
-  <div class="w3-container">
-    <center><c>Work Escape</center></c>
+  <div class="w3-black">
+    <button class="w3-button w3-black w3-xlarge" onclick="w3_open()">&#9776;</button>
+    <div class="w3-container">
+      <center><a href="https://ewtechinc.github.io/workescape/home.html"><img src="ewlogo.jpg" alt="ewlogo" width="100" height="100" border="0"></a><c>Work Escape</center></c>
+    </div>
   </div>
-</div>
 
 <style>
 
@@ -159,9 +164,9 @@ html {
       <div class="container">
         <b>Ashley Hau</b>
         <p class="title">Founder</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p> I’m interested in graphic and fashion design. </p>
         <p>ashhau@gmail.com</p>
-        <p><button class="button">Contact Me!</button></p>
+        <!-- <p><button class="button">Contact Me!</button></p> -->
       </div>
     </div>
   </div>
@@ -172,9 +177,9 @@ html {
       <div class="container">
         <b>Ashley Kang</b>
         <p class="title">Founder</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>I’m interested in video game and animation design. </p>
         <p>ashleykang483@gmail.com</p>
-        <p><button class="button">Contact Me!</button></p>
+        <!-- <p><button class="button">Contact Me!</button></p> -->
       </div>
     </div>
   </div>
@@ -185,9 +190,9 @@ html {
         <div class="container">
           <b>Cathy Kim</b>
           <p class="title">Founder</p>
-          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <p>I’m interested in animations and film making. </p>
           <p>cathy.seoyoung@gmail.com</p>
-          <p><button class="button">Contact Me!</button></p>
+          <!--  <p><button class="button">Contact Me!</button></p> -->
         </div>
       </div>
     </div>
@@ -220,9 +225,9 @@ html {
                   <hr>
                     <b>Our Social Sites</b>
                   <ul class="list-inline banner-social-buttons">
-                    <li><a href="https://www.linkedin.com/in/ashleyhau" class="btn btn-default btn-lg"><i class="fa fa-linkedin"> <span class="network-name">Ashley Hau</span></i></p></li>
-                    <li><a href="https://www.linkedin.com/in/ashley-kang" class="btn btn-default btn-lg"><i class="fa fa-linkedin"> <span class="network-name">Ashley Kang</span></i></p></li>
-                    <li><a href="https://www.linkedin.com/in/catherinekim012/" class="btn btn-default btn-lg"><i class="fa fa-linkedin"> <span class="network-name">Cathy Kim</span></i></p></li>
+                    <li><a href="https://www.linkedin.com/in/ashleyhau" class="btn btn-default btn-lg"><i class="fa fa-linkedin"> <span class="network-name">Ashley Hau</span></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/ashleykang" class="btn btn-default btn-lg"><i class="fa fa-linkedin"> <span class="network-name">Ashley Kang</span></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/catherinekim012" class="btn btn-default btn-lg"><i class="fa fa-linkedin"> <span class="network-name">Cathy Kim</span></i></a></li>
 
                   </ul>
                 </div>
