--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link href="https://fonts.googleapis.com/css?family=Cuprum|EB+Garamond|Euphoria+Script|Nunito" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="logotemp.jpg" />
+    <link rel="shortcut icon" type="image/x-icon" href="ewlogo.jpg" />
 </head>
 
 <style>
@@ -62,12 +62,12 @@ function w3_close() {
   </a>
 </div>
 
-<div zclass="w3-main" id="main">
+<div class="w3-main" id="main">
 
 <div class="w3-black">
   <button class="w3-button w3-black w3-xlarge" onclick="w3_open()">&#9776;</button>
   <div class="w3-container">
-    <center><c>Work Escape</center></c>
+    <center><a href="https://ewtechinc.github.io/workescape/home.html"><img src="ewlogo.jpg" alt="ewlogo" width="100" height="100" border="0"></a><c>Work Escape</center></c>
   </div>
 </div>
 
