--- a/aboutus.html
+++ b/aboutus.html
@@ -83,8 +83,8 @@ function w3_close() {
     At the end of the program, we had 7 days to create a final project with the information we learned over the past 5 weeks.</p>
     <p>We decided to use this project as an opportunity to address the gender inequality and mistreatment within the workplace for both males and females. We hope that our game will raise more awareness about
         this issue by portraying real-life scenarios of employees facing this "unconscious" gender bias. </p>
-    <p>Just like the disclaimer says, these are very specific examples of the struggles men and women face in certain workplaces. Ultimately, we need to acknowledge that gender inequality in the workforce
-        is a concurrent issue we hope would be solved in the near future.</p>
+    <p>Just like the disclaimer says, these are very specific examples of the struggles men and women face in certain workplaces. Ultimately, our goal is to acknowledge the gender inequality that still exists in the workforce,
+        and we hope it will be solved in the near future.</p>
     <p>Thank you for coming to our website, and we hope you will enjoy your time here!</p>
 <p>Sincerely,</p>
 <p>Ashley Hau,
