--- a/contactus.html
+++ b/contactus.html
@@ -26,6 +26,10 @@
     font-family: 'Cuprum', sans-serif;
   }
 
+  .contact-line {
+    background-color:#C3D2D5;
+  }
+
 </style>
 
 <script>
@@ -41,8 +45,6 @@ function w3_close() {
   document.getElementById("openNav").style.display = "inline-block";
 }
 </script>
-
-<body bgcolor="C3D2D5">
 
 <title>Work Escape</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -151,11 +153,20 @@ html {
 .button:hover {
   background-color: #555;
 }
+
+.row{
+  background-color:#333333;
+}
+
+.column{
+  background-color:#ffffff;
+}
+
 </style>
 </head>
 <body>
 
-<b><center>Contact The Team</center></b>
+<b><center class="contact-line">Contact The Team</center></b>
 
 <div class="row">
   <div class="column">
