--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link href="https://fonts.googleapis.com/css?family=Cuprum|EB+Garamond|Euphoria+Script|Nunito" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="ewlogo.jpg" />
+    <link rel="shortcut icon" type="image/x-icon" href="logotemp.jpg" />
 </head>
 
 <style>
@@ -100,18 +100,24 @@ function w3_close() {
   </a>
 </div>
 
-<div class="w3-main" id="main">
+<div zclass="w3-main" id="main">
 
-  <div class="w3-black">
-    <button class="w3-button w3-black w3-xlarge" onclick="w3_open()">&#9776;</button>
-    <div class="w3-container">
-      <center><a href="https://ewtechinc.github.io/workescape/home.html"><img src="ewlogo.jpg" alt="ewlogo" width="100" height="100" border="0"></a><c>Work Escape</center></c>
-    </div>
+<div class="w3-black">
+  <button class="w3-button w3-black w3-xlarge" onclick="w3_open()">&#9776;</button>
+  <div class="w3-container">
+    <center><c>Work Escape</center></c>
   </div>
+</div>
 
 <button class="accordion"><b>Instructions</b></button>
 <div class="panel">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>1. Choose your gender to start the game.</p>
+  <p>2. When the simulation begins, use the arrow keys to guide your character to one of the coworkers and begin conversations.</p>
+  <p>3. The goal of the game is defeat the gender inequality in your workplace, so every time your character stands up for himself/herself instead of succumbing to the mistreatment, you gain a point.If your character fails to stand up for itself 3 out of the 5 total times, you fail; otherwise, you win the game.</p>
+  <p>4. If your character fails to stand up for itself 3 out of the 5 total times, you fail; otherwise, you win the game.</p>
+  <p>Disclaimer: The scenarios that are portrayed in this game are real-life scenarios, meaning that while the examples are specific, gender is still an issue in our societ.
+    Our goal is to shed light on the underlying gender issues that occur in the workforce.</p>
+
 </div>
 
 <script>
