--- a/game.html
+++ b/game.html
@@ -20,7 +20,7 @@
   }
 
 button.accordion {
-    background-color: #D6EAF8;
+    background-color: #000033;
     color: white;
     cursor: pointer;
     padding: 18px;
@@ -115,8 +115,8 @@ function w3_close() {
   <p>2. When the simulation begins, use the arrow keys to guide your character to one of the coworkers and begin conversations.</p>
   <p>3. The goal of the game is defeat the gender inequality in your workplace, so every time your character stands up for himself/herself instead of succumbing to the mistreatment, you gain a point.If your character fails to stand up for itself 3 out of the 5 total times, you fail; otherwise, you win the game.</p>
   <p>4. If your character fails to stand up for itself 3 out of the 5 total times, you fail; otherwise, you win the game.</p>
-  <p>Disclaimer: The scenarios that are portrayed in this game are real-life scenarios, meaning that while the examples are specific, gender is still an issue in our societ.
-    Our goal is to shed light on the underlying gender issues that occur in the workforce.</p>
+  <p><font color=red>Disclaimer: The scenarios that are portrayed in this game are real-life scenarios, meaning that while the examples are specific, gender is still an issue in our societ.
+    Our goal is to shed light on the underlying gender issues that occur in the workforce.</font></p>
 
 </div>
 
