--- a/contactus.html
+++ b/contactus.html
@@ -166,7 +166,7 @@ html {
       <img src="IMG_100.jpg" alt="Ashley Hau" style="width:100%">
       <div class="container">
         <b>Ashley Hau</b>
-        <p class="title">Founder, Web Design</p>
+        <p class="title">Co-Founder, Web Design</p>
         <p> I’m interested in graphic and fashion design. </p>
         <p>ashhau@gmail.com</p>
         <!-- <p><button class="button">Contact Me!</button></p> -->
@@ -179,7 +179,7 @@ html {
       <img src="IMG_5777a.jpg" alt="Ashley Kang" style="width:100%">
       <div class="container">
         <b>Ashley Kang</b>
-        <p class="title">Founder, Web Design</p>
+        <p class="title">Co-Founder, Web Design</p>
         <p>I’m interested in video game and animation design. </p>
         <p>ashleykang483@gmail.com</p>
         <!-- <p><button class="button">Contact Me!</button></p> -->
@@ -192,7 +192,7 @@ html {
         <img src="IMG_0621a.jpg" alt="Cathy" style="width:100%">
         <div class="container">
           <b>Cathy Kim</b>
-          <p class="title">Founder, Game Design</p>
+          <p class="title">Co-Founder, Game Design</p>
           <p>I’m interested in animations and film making. </p>
           <p>cathy.seoyoung@gmail.com</p>
           <!--  <p><button class="button">Contact Me!</button></p> -->
