--- a/home.html
+++ b/home.html
@@ -148,7 +148,7 @@ function w3_close() {
   <b>Thank You Note</b>
   <p>We want to thank Girls Who Code for giving us this opportunity to explore and learn about computer science and coding.
     Girls Who Code allowed us to able to find our future passions, and we can’t thank them enough. </p>
-  <p>We would also like to give a massive thank you to our teaching staff, Megan, Cindy, and Ruthy,
+  <p>We would also like to give a massive thank you to our teaching staff, Megan, Cindy, and Ruthi,
     for being so patient as they help debug our code and research extensions for our website — and entertain us when we’re half dead and exhausted!</p>
 </center></br>
 
