--- a/game.html
+++ b/game.html
@@ -137,6 +137,27 @@ for (i = 0; i < acc.length; i++) {
 }
     
 </script>
+</body>
+    <style>
+canvas {
+    border:1px solid #d3d3d3;
+    background-color: #f1f1f1;
+    dislay: inline;
+    width: 100%;
+    text-align: center;
+}
+</style>
+</head>
+<script src="javascriptpt3.js"></script>
+<body onload="startGame()">
+<div style="text-align:center;width:480px;">
+  <button type = "button" onclick="gameoption('FEMALE')">FEMALE</button>
+  <button type = "button" onclick="gameoption('MALE')">MALE</button>
+  <button type = "button" onclick="gameoption('Other')">OTHER</button><br><br>
+</div>
+
+<p>Click the button that relates to your gender.</p>
+<p>Press Start to begin!</p>
 
 </body>
 </html>
