added button to go to game

--- a/game.html
+++ b/game.html
@@ -137,5 +137,6 @@ for (i = 0; i < acc.length; i++) {
 }
     
 </script>
+ <button type="button" a href="https://ewtechinc.github.io/workescape/graphics.html">Click me for the game!</button>
 </body>
 </html>
