--- a/game.html
+++ b/game.html
@@ -137,6 +137,6 @@ for (i = 0; i < acc.length; i++) {
 }
     
 </script>
-  <button onclick="window.location.href='\graphics.html'">Click me for the game!</button>
+  <button onclick="window.open('http://google.com','_blank')">Click me for the game!</button>
 </body>
 </html>
