--- a/contactus.html
+++ b/contactus.html
@@ -229,7 +229,7 @@ html {
                     <b>Our Social Sites</b>
                   <ul class="list-inline banner-social-buttons">
                     <li><a href="https://www.linkedin.com/in/ashleyhau" class="btn btn-default btn-lg"><i class="fa fa-linkedin"> <span class="network-name">Ashley Hau</span></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/ashleykang" class="btn btn-default btn-lg"><i class="fa fa-linkedin"> <span class="network-name">Ashley Kang</span></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/ashley-kang-680140142/" class="btn btn-default btn-lg"><i class="fa fa-linkedin"> <span class="network-name">Ashley Kang</span></i></a></li>
                     <li><a href="https://www.linkedin.com/in/catherinekim012" class="btn btn-default btn-lg"><i class="fa fa-linkedin"> <span class="network-name">Cathy Kim</span></i></a></li>
 
                   </ul>
