--- a/game.html
+++ b/game.html
@@ -140,3 +140,7 @@ for (i = 0; i < acc.length; i++) {
   <button onclick="window.open('graphics.html','_blank')">Click me for the game!</button>
 </body>
 </html>
+    
+    <center>      
+        <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/170701846/?autostart=false" frameborder="0" allowfullscreen></iframe>
+    </center>
