--- a/game.html
+++ b/game.html
@@ -113,9 +113,9 @@ function w3_close() {
 <div class="panel">
   <p>1. Choose your gender to start the game.</p>
   <p>2. When the simulation begins, use the arrow keys to guide your character to one of the coworkers and begin conversations.</p>
-  <p>3. The goal of the game is defeat the gender inequality in your workplace, so every time your character stands up for himself/herself instead of succumbing to the mistreatment, you gain a point.If your character fails to stand up for itself 3 out of the 5 total times, you fail; otherwise, you win the game.</p>
-  <p>4. If your character fails to stand up for itself 3 out of the 5 total times, you fail; otherwise, you win the game.</p>
-  <p><font color=red>Disclaimer: The scenarios that are portrayed in this game are real-life scenarios, meaning that while the examples are specific, gender is still an issue in our societ.
+  <p>3. The goal of the game is defeat the gender inequality in your workplace, so every time your character stands up for himself/herself instead of succumbing to the mistreatment, you gain a point. If your character fails to stand up for itself at least 3 times, you fail; otherwise, you win the game.</p>
+  <p>4. If your character fails to stand up for itself at least 3 times, you fail; otherwise, you win the game.</p>
+  <p><font color=red>Disclaimer: The scenarios that are portrayed in this game are real-life scenarios, meaning that while the examples are specific, gender is still an issue in our society.
     Our goal is to shed light on the underlying gender issues that occur in the workforce.</font></p>
 
 </div>
