--- a/game.html
+++ b/game.html
@@ -140,7 +140,8 @@ for (i = 0; i < acc.length; i++) {
   <button onclick="window.open('graphics.html','_blank')">Click me for the game!</button>
 </body>
 </html>
-    
+   
+    <b>Male Version</b>
     <center>      
         <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/170701846/?autostart=false" frameborder="0" allowfullscreen></iframe>
     </center>
