--- a/aboutus.html
+++ b/aboutus.html
@@ -96,7 +96,7 @@ Ashley Kang</p>
 
 </div>
     
-    <script src="//my.visme.co/visme.js"></script><div class="visme_d" data-url="n066mp0n-males-in-nursing" data-w="800" data-h="1090"></div><p style="font-family: Arial; font-size: 10px; color: #333333" >Created using <a href="http://www.visme.co/make-infographics" target="_blank" style="color: #30a0ea"><strong>Visme</strong></a>. An easy-to-use Infographic Maker.</p>
+    <script src="//my.visme.co/visme.js"></script><div class="visme_d" data-url="n066mp0n-males-in-nursing" data-w="800" data-h="1090"></div>
 
 </body>
 </html>
