--- a/aboutus.html
+++ b/aboutus.html
@@ -93,7 +93,7 @@ Ashley Kang</p>
 
 
 </div>
-<script src="//my.visme.co/visme.js"></script><div class="visme_d" data-url="n066mp0n-males-in-nursing" data-w="800" data-h="1090"></div>
+<div class="visme_d" data-url="n066mp0n-males-in-nursing" data-w="800" data-h="1090"></div>
 </div>
     
 </body>
