--- a/game.html
+++ b/game.html
@@ -141,6 +141,11 @@ for (i = 0; i < acc.length; i++) {
 </body>
 </html>
    
+    <b>Female Version</b>
+    <center>      
+        <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/170525080/?autostart=false" frameborder="0" allowfullscreen></iframe>
+    </center>
+    
     <b>Male Version</b>
     <center>      
         <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/170701846/?autostart=false" frameborder="0" allowfullscreen></iframe>
