--- a/aboutus.html
+++ b/aboutus.html
@@ -91,10 +91,11 @@ function w3_close() {
 Cathy Kim,
 Ashley Kang</p>
 
+</div>
+</div>
 
-</div>
-<script src="//my.visme.co/visme.js"></script><div class="visme_d" data-url="n066mp0n-males-in-nursing" data-w="800" data-h="1090"></div>
-</div>
+    <script src="//my.visme.co/visme.js"></script><div class="visme_d" data-url="ep880vky-women-in-tech" data-w="800" data-h="2000"></div>
+    <script src="//my.visme.co/visme.js"></script><div class="visme_d" data-url="n066mp0n-males-in-nursing" data-w="800" data-h="1090"></div>
     
 </body>
 </html>
