--- a/aboutus.html
+++ b/aboutus.html
@@ -74,7 +74,7 @@ function w3_close() {
   </div>
 
 <div class="w3-container">
-    <center><b>About Us</b></center>
+    <br><center><b>About Us</b></center>
 <p>Hi there!</p>
 <p>Welcome to our page! We (Ashley Hau, Cathy Kim, and Ashley Kang) are the founders of Equality Wins Tech Inc. (EWtech Inc.)
     and the creators of Work Escape (WE). Our company, EWtech Inc., is founded on the basis of gender equality — we believe everyone in the workforce should be treated equally regardless of his or her gender. </p>
