--- a/aboutus.html
+++ b/aboutus.html
@@ -82,7 +82,9 @@ function w3_close() {
         by teaching girls how to program and code. </p>
     <p>During the program, we learned to code with different languages: python, HTML, CSS, robotics (Arduino C), and we were introduced to various topics such as web security and the internet.
     At the end of the program, we had 7 days to create a final project with the information we learned over the past 5 weeks.</p>
-    <p>We decided to use this project as an opportunity to address the gender inequality and mistreatment within the workplace for both males and females. We hope that our game will raise more awareness about
+    <p>We decided to use this project as an opportunity to address the gender inequality and mistreatment within the workplace for both males and females.
+        Our game was inspired by a GoDaddy guest speaker who was mistaken as a receptionist on her first day of work even though she's an engineer.
+        We hope that our game will raise more awareness about
         this issue by portraying real-life scenarios of employees facing this "unconscious" gender bias. </p>
     <p>Just like the disclaimer says, these are very specific examples of the struggles men and women face in certain workplaces. Ultimately, our goal is to acknowledge the gender inequality that still exists in the workforce,
         and we hope it will be solved in the near future.</p>
